# token-governance-layer

./: .gitattributes  .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  package.json  pyproject.toml  token-governance-layer-overall-plan.zh.md  token-governance.config.example.json
.github/scripts/: check_public_docs.py
.github/workflows/: ci.yml
benchmarks/: __init__.py  check_readme.py  run.py
benchmarks/fixtures/: manifest.json
benchmarks/results/: v0.2.0.json
benchmarks/schema/: result-v1.schema.json
docs/: benchmark.md  gateway.md  security.md
docs/design/: 2026-07-13-v0.2-trustworthy-release-design.md
docs/evidence/: 2026-07-13-t00-claude-hook-assertions.json  2026-07-13-t00-claude-hook-viability.md  2026-07-14-t08-mcp-gateway.json
docs/prompts/: 2026-07-13-v0.2-trustworthy-release-execution.md
docs/releases/: v0.2.0.md
docs/tickets/: 2026-07-13-v0.2-trustworthy-release-tickets.md
scripts/: release_build_package.py  release_check.py  release_common.py  release_selftest.py  release_set_version.py  release_verify_package.py  release_verify_remote.py
src/token_governance/: __init__.py  claude_hook.py  cli.py  config.py  contracts.py  core.py  installer.py  ledger.py  mcp_gateway.py  mcp_server.py  policy.py  preservation.py  secret_detector.py  shapers.py  tokenizer.py
tests/: test_benchmarks.py  test_claude_hook.py  test_cli.py  test_config.py  test_contracts.py  test_core.py  test_governance_v2.py  test_installer.py  test_ledger_v2.py  test_mcp_gateway.py  test_mcp_server.py  test_npm_wrapper.py  test_policy_v2.py  test_preservation.py  test_secret_detector.py  test_shapers.py
tests/fixtures/: fake_mcp_backend.py  ledger_v1.sql  strict_mcp_backend.py
