[project]
name = "token-governance-layer"
version = "0.2.0"
description = "Experimental local-first output governance for Claude Code."
requires-python = ">=3.10,<3.15"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Token Governance Layer Contributors" }]
keywords = ["claude-code", "mcp", "token", "context-governance", "local-first"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/spacesky-cell/token-governance-layer"
Repository = "https://github.com/spacesky-cell/token-governance-layer.git"
Issues = "https://github.com/spacesky-cell/token-governance-layer/issues"
Changelog = "https://github.com/spacesky-cell/token-governance-layer/blob/main/CHANGELOG.md"

[project.scripts]
tgl = "token_governance.cli:main"
tgl-mcp = "token_governance.mcp_server:main"
tgl-mcp-gateway = "token_governance.mcp_gateway:main"
tgl-claude-hook = "token_governance.claude_hook:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
